<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bck"
    tools:context=".introActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="264dp"
        android:layout_height="264dp"
        android:background="@drawable/sonrisa"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="260dp"
        android:layout_height="157dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/intro_1_main_msg"
        android:textColor="@color/white"
        android:textSize="42dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nameBtn"
        android:layout_width="321dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/blue"
        android:text="@string/intro_1_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/takePic"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:background="@drawable/button_shape"
        android:text="@string/intro_1_take_photo"
        android:fontFamily="@font/inter_medium"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/conditions"
        android:layout_width="348dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/intro_1_terms"
        android:textColor="@color/grey"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePic"
        app:layout_constraintVertical_bias="0.376" />

</androidx.constraintlayout.widget.ConstraintLayout>